# wow-api

./: .gitignore  OAuth.py  README.md  ah_scan.py  api-test.py  item_lookup.py  logtest.py  pyproject.toml
scrapers/: ah_scan.py  item_scraper.py  profession_scraper.py  reagent_scraper.py  recipe_scraper.py  single_item.py
wowapi/: WoWapi.py  __init__.py
